...
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/share_image_description"
                    android:src="@android:color/transparent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/order_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_layout_margin"
                    android:layout_marginTop="@dimen/small_layout_margin"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/done_button" />
...
